recipes/pickle-soup/style.css
/* You can either copy the below and paste it between style tags on your HTML page, OR you can copy this to a file and name it .css and link it from your HTML page. */

/* tip: you can add a scrollbar to any note by adding this property to its css class: overflow:auto; */
@font-face {
                font-family: VeniceClassic;
                src: url(https://sadhost.neocities.org/fonts/VeniceClassic.woff);
            }
            /*
            @font-face {
                font-family: VeniceClassic;
                src: url('https://goblintech.neocities.org/fonts/VeniceClassic.ttf');
            }
            */
            @font-face {
                font-family: Nunito;
                src: url('https://sadhost.neocities.org/fonts/Nunito-Regular.ttf');
            }

            @font-face {
                font-family: Nunito;
                src: url('https://sadhost.neocities.org/fonts/Nunito-Bold.ttf');
                font-weight: bold;
            }

            @font-face {
                font-family: Nunito;
                src: url('https://sadhost.neocities.org/fonts/Nunito-Italic.ttf');
                font-style: italic;
            }

            @font-face {
                font-family: Nunito;
                src: url('https://sadhost.neocities.org/fonts/Nunito-BoldItalic.ttf');
                font-style: italic;
                font-weight: bold;
            }
html, body {
  font-family: 'Nunito', sans-serif;
  background-image:url('/images/recipes/recipebg.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  background-position: center;
  margin:0;
  padding:0;

}

      #container {
                background: url('/images/recipes/paper1.png');
                background-size: cover;
                background-repeat: no-repeat;

                max-width: 900px;
                /* this is the width of your layout! */
                /* if you change the above value, scroll to the bottom
      and change the media query according to the comment! */
                margin: 0 auto;
                /* this centers the entire page */
            }

            /* the area below is for all links on your page
    EXCEPT for the navigation */
            #container a {
                color: #ED64F5;
                font-weight: bold;
                /* if you want to remove the underline
      you can add a line below here that says:
      text-decoration:none; */
            }

            #header {
                width: 100%;
                background-color: #5e4e8c;
                /* header color here! */
                height: 150px;
                /* this is only for a background image! */
                /* if you want to put images IN the header,
      you can add them directly to the <div id="header"></div> element! */
                background-image: url('/images/blkwarp.gif');
                background-size: 100%;
            }

            /* navigation section!! */
            #navbar {
                height: 40px;
                background-color: #13092D;
                /* navbar color */

                width: 100%;
            }

            #navbar ul {
                display: flex;
                padding: 0;
                margin: 0;
                list-style-type: none;
                justify-content: space-evenly;
            }

            #navbar li {
                padding-top: 10px;
            }

            /* navigation links*/
            #navbar li a {
                color: #ED64F5;
                /* navbar text color */
                font-weight: 800;
                text-decoration: none;
                /* this removes the underline */
            }

            /* navigation link when a link is hovered over */
            #navbar li a:hover {
                color: #a49cba;
                text-decoration: underline;
                display: block;
            }
            #navbar .unfinished {
                padding: 0px;
                opacity: 0%;
            }

            #navbar .unfinished:hover {
                opacity: 100%;
            }
            #content {
              white-space: wrap;
              padding-left: 80px;
              padding-right: 10px;
              font-family: VeniceClassic;
              font-size: 22px;
            }

